fix: fixed the scrolling div, deleted horizontal scroll-bar

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,5 +8,5 @@
 .results {
   width: 200px;
   height: 300px;
-  overflow: scroll;
+  overflow-y: scroll;
 }
